POM tidy up and added module-info.java
Parent POM is now org.eclipse.ee4j:project
Added integration test to ensure code built with JDK 1.8
Added CI settings with toolchains.xml

POM left unformatted to make diff easier

Signed-off-by: earcam <Caspar MacRae earcam@gmail.com>